# requitec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/requite/: alias.hpp  anonymous_function.hpp  anonymous_object.hpp  assert.hpp  ast_writer.hpp  attribute_flags.hpp  attribute_type.hpp  attributes.hpp  builder.hpp  codeunits.hpp  const_expression_iterator.hpp  const_internal_scope_iterator.hpp  const_sub_scope_iterator.hpp  containing_scope_iterator.hpp  context.hpp  csv.hpp  export_table.hpp  expression.hpp  expression_iterator.hpp  expression_ranger.hpp  expression_walk_result.hpp  expression_walker.hpp  file.hpp  finalizer.hpp  float_semantics.hpp  grouping.hpp  grouping_type.hpp  internal_scope_iterator.hpp  label.hpp  literal_text.hpp  local_tabulator.hpp  log_type.hpp  lookup_context.hpp  maker.hpp  module.hpp  (+49 more)
src/: CMakeLists.txt  alias.cpp  anonymous_function.cpp  anonymous_object.cpp  anonymous_property.cpp  attribute_flags.cpp  attributes.cpp  build.cpp  build_ir.cpp  build_user_symbols.cpp  builder.cpp  compile_object_files.cpp  compile_objects.cpp  const_expression_iterator.cpp  const_internal_scope_iterator.cpp  const_sub_scope_iterator.cpp  containing_scope_iterator.cpp  context.cpp  contextualize.cpp  determine_user_symbol_names.cpp  escape_sequences.cpp  evaluate_values.cpp  export_table.cpp  expression.cpp  expression_iterator.cpp  expression_make.cpp  file.cpp  filesystem.cpp  finalize_locals.cpp  finalizer.cpp  get_module.cpp  internal_scope_iterator.cpp  label.cpp  link_objects.cpp  llvm_module.cpp  llvm_target.cpp  log.cpp  lookup_symbols.cpp  main.cpp  make_symbols.cpp  (+60 more)
test/: CMakeLists.txt
test/src/: CMakeLists.txt  catch2_ext.hpp  codeunits_tests.cpp  grouping_type_tests.cpp  numeric_tests.cpp  token_type_tests.cpp
test_sources/: Makefile  error_handling.rq  hello_world.rq  test.rq
(+35 files in other folders)
